--- a/Launchbase/Components/Presale/Step2.razor
+++ b/Launchbase/Components/Presale/Step2.razor
@@ -63,7 +63,7 @@
                             </MudItem>
                             <MudItem xs="12" Class="pb-2">
                                 <input type="text" title="" required placeholder="0"
-                                       class=" bg-pr border-none outline-none w-full px-2 py-2 text-white rounded-md" @bind="Presale.PresaleState.Value.SoftCap" />
+                                       class=" bg-pr border-none outline-none w-full px-2 py-2 text-white rounded-md" @bind="Presale.PoolState.Value.SoftCap" />
                             </MudItem>
                         </MudItem>
                         <MudItem xs="6">
@@ -75,7 +75,7 @@
                             </MudItem>
                             <MudItem xs="12" Class="pb-2">
                                 <input type="text" title="" required placeholder="0"
-                                       class=" bg-pr border-none outline-none w-full px-2 py-2 text-white rounded-md" @bind="Presale.PresaleState.Value.HardCap" />
+                                       class=" bg-pr border-none outline-none w-full px-2 py-2 text-white rounded-md" @bind="Presale.PoolState.Value.HardCap" />
                             </MudItem>
                         </MudItem>
                         <MudItem xs="6">
@@ -87,7 +87,7 @@
                             </MudItem>
                             <MudItem xs="12" Class="pb-2">
                                 <input type="text" title="" required placeholder="0"
-                                       class=" bg-pr border-none outline-none w-full px-2 py-2 text-white rounded-md" @bind="Presale.PresaleState.Value.MinimumBuy" />
+                                       class=" bg-pr border-none outline-none w-full px-2 py-2 text-white rounded-md" @bind="Presale.PoolState.Value.MinimumBuy" />
                             </MudItem>
                         </MudItem>
                         <MudItem xs="6">
@@ -99,7 +99,7 @@
                             </MudItem>
                             <MudItem xs="12" Class="pb-2">
                                 <input type="text" title="" required placeholder="0"
-                                       class=" bg-pr border-none outline-none w-full px-2 py-2 text-white rounded-md" @bind="Presale.PresaleState.Value.MaximumBuy" />
+                                       class=" bg-pr border-none outline-none w-full px-2 py-2 text-white rounded-md" @bind="Presale.PoolState.Value.MaximumBuy" />
                             </MudItem>
                         </MudItem>
                         <MudItem xs="12" Class="pt-5 pb-2">
@@ -115,7 +115,7 @@
                                 </p>
                             </MudItem>
                             <MudItem xs="6" Class="pb-2">
-                                <MudDatePicker Class="text-white" PickerVariant="PickerVariant.Dialog" @bind-Date="Presale.PresaleState.Value.StartTime" />
+                                <MudDatePicker Class="text-white" PickerVariant="PickerVariant.Dialog" @bind-Date="Presale.PoolState.Value.StartTime" />
                             </MudItem>
                         </MudItem>
                         <MudItem xs="6">
@@ -126,7 +126,7 @@
                                 </p>
                             </MudItem>
                             <MudItem xs="6" Class="pb-2">
-                                <MudDatePicker Class="text-white" PickerVariant="PickerVariant.Dialog" @bind-Date="Presale.PresaleState.Value.EndTime" />
+                                <MudDatePicker Class="text-white" PickerVariant="PickerVariant.Dialog" @bind-Date="Presale.PoolState.Value.EndTime" />
                             </MudItem>
                         </MudItem>
                         <MudItem xs="4">
